build pages before push

--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
 <body>
   <button id="generate">Generate Cowsay</button>
   <pre id="cowsayOutput"></pre>
-  <script src="./bundle.js"></script>
+  <script src="./dist/bundle.js"></script>
 </body>
 
 </html>
