--- a/index.html
+++ b/index.html
@@ -60,8 +60,16 @@
       try {
         const response = await fetch(apiUrl);
         const data = await response.json();
-        const asset = data.assets.find(a => a.name === 'bundle.js');
 
+        // Extract the release version
+        const releaseVersion = data.tag_name || 'unknown version';
+
+        // Update the button text to include the release version
+        const button = document.getElementById('generate');
+        button.textContent = `Generate Cowsay (${releaseVersion})`;
+
+        // Find and load the asset (e.g., bundle.js)
+        const asset = data.assets.find(a => a.name === 'bundle.js');
         if (asset) {
           const script = document.createElement('script');
           script.src = asset.browser_download_url;
