--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
       background-color: #f5f5f5;
     }
 
+    .button-container {
+      display: flex;
+      gap: 10px;
+      /* Space between buttons */
+      margin-top: 20px;
+    }
+
     input {
       width: 300px;
       padding: 10px;
@@ -34,6 +41,22 @@
       border-radius: 5px;
       background-color: #007bff;
       color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 8px;
+    }
+
+    button.secure {
+      background-color: #28a745;
+      /* Green to indicate security */
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    button.secure:before {
+      content: '🔒';
+      /* Lock emoji for visual indicator */
+      font-size: 1.2em;
     }
 
     pre {
@@ -50,7 +73,11 @@
 </head>
 
 <body>
-  <button id="generate">Generate Cowsay</button>
+  <div class="button-container">
+    <button id="secureButton" class="secure" aria-label="Secure Button"></button>
+    <button id="generate">Generate Cowsay</button>
+  </div>
+
   <pre id="cowsayOutput"></pre>
   <script>
     (async () => {
