--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       const version = packageJson.version;
       // Update the button text to include the release version
       const button = document.getElementById('generate');
-      button.textContent = `Generate Cowsay (${version})`;
+      button.textContent = `Generate Cowsay (v${version})`;
     })();
   </script>
   <script src="./bundle.js"></script>
