--- a/public/index.html
+++ b/public/index.html
@@ -98,7 +98,7 @@
     })();
   </script>
   <script src="./bundle.js"></script>
-  <img src="./cowsay.png" alt="Cow says" width="300">
+  <img src="./cowsay.svg" alt="Cow says" width="300">
 </body>
 
 </html>
