--- a/public/index.html
+++ b/public/index.html
@@ -98,7 +98,9 @@
     })();
   </script>
   <script src="./bundle.js"></script>
-  <img src="./cowsay.svg" alt="Cow says" width="300">
+  <div id="outside">See the sketch of a cow below</div>
+  <iframe src="./cowsay.svg"></iframe>
+  <div id=outside>
 </body>
 
 </html>
